--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>Tilechat Widget</title>
+  <title>Facture.Cr Widget</title>
   <base href="./">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://facture.cr/img/LogoE.png">
 </head>
 <body>
      <tiledeskwidget-root projectid= '5b55e806c93dde00143163dd'></tiledeskwidget-root>
