--- a/src/test-auth-remote.html
+++ b/src/test-auth-remote.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Tilechat Widget</title>
+  <title>Facture.Cr Widget</title>
   <base href="./">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://facture.cr/img/LogoE.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
